changed Loader test